crates/ts-pack-core/tests/snapshots/wire_format__diagnostic_shape.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "Diagnostic\n{\n    message: \"Syntax error: unexpected '}'\".to_string(), severity:\n    DiagnosticSeverity::Error, span: span(),\n}"
---
{
  "message": "Syntax error: unexpected '}'",
  "severity": "Error",
  "span": {
    "start_byte": 10,
    "end_byte": 20,
    "start_line": 1,
    "start_column": 0,
    "end_line": 2,
    "end_column": 5
  }
}
