crates/ts-pack-core/tests/snapshots/wire_format__docstring_format_other_serializes_as_single_keyed_object.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "DocstringFormat::Other(\"rst\".to_string())"
---
{
  "Other": "rst"
}
