crates/ts-pack-core/tests/snapshots/wire_format__docstring_format_unit_variant_serializes_as_bare_string-2.snap
---
source: crates/ts-pack-core/tests/wire_format.rs
expression: "DocstringFormat::JSDoc"
---
"JSDoc"
